frontend/kube/deploy-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: archivum-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: archivum-frontend
  template:
    metadata:
      labels:
        app: archivum-frontend
    spec:
      containers:
        - name: archivum-frontend
          image: homelab.local:30005/archivum-frontend
          imagePullPolicy: Always
          ports:
          - containerPort: 80
