frontend/kube/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: archivum-frontend
spec:
  selector:
    app: archivum-frontend
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30010
