frontend/kube/ingress-frontend.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: archivum-frontend
  namespace: default
spec:
  entryPoints:
    - web
    - websecure 
  routes:
    - kind: Rule
      match: Host(`tracker.looank.com`)
      services:
        - kind: Service
          name: archivum-frontend
          port: 80
  tls:
    certResolver: dns-simple
    domains:
      - main: tracker.looank.com
